--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header{
     color: white;
     width: 100%;
     margin-bottom: 92px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     /* display: none; */
 }
 
@@ -35,7 +36,7 @@ h2 {
     font-size: 26px;
     color:#333333;
     letter-spacing: 0.018em;
-    background-color: chartreuse;
+    /* background-color: chartreuse; */
     margin-bottom: 17px;
 }
 h3{
@@ -52,6 +53,8 @@ h4 {
     line-height: 18px;
     color:#A6A6A6;
     margin-bottom: 5px;
+    max-height: 40px;
+    overflow: hidden;
 }
 .price{
     font-weight: 400;
@@ -64,16 +67,16 @@ h4 {
 main {
 display: flex;
 flex-direction: column;
-background-color: aqua;
+justify-content: space-between;
+/* background-color: aqua; */
 margin-top: 92px;
 padding-top: 31px;
 padding-left: 19px; 
-height: calc(100vh - 184);
+height: calc(100vh - 184px);
 }
 
 section{
-    background-color: brown;
-    margin-bottom: 27px;
+    /* background-color: brown; */
 }
 .options{
     display: flex;
@@ -90,6 +93,7 @@ section{
     padding: 18px 14px 14px 14px;
     border-radius: 9px;
     margin-right: 16px;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
 }
 img{
     height: 87px;
