--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ height: calc(100vh - 184px);
 }
 
 .option {
-    background-color: red;
+    background-color: white;
     width: 172px;
     display: flex;
     flex-direction: column;
@@ -96,11 +96,36 @@ height: calc(100vh - 184px);
     border-radius: 9px;
     margin-right: 16px;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+    position: relative;
 }
 img{
     height: 87px;
     width: 144px;
     border-radius: 4px;
+}
+
+ion-icon{
+    font-size: 19px;
+    color: #32B72F;
+    position: absolute;
+    bottom: 9px;
+    right: 11px;
+    display: none;
+}
+
+.option-selected{
+    background-color: white;
+    width: 172px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 18px 14px 14px 14px;
+    border-radius: 9px;
+    margin-right: 16px;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+    position: relative;
+    border: 5px solid  #32B72F; 
+    padding: 13px 9px 9px 9px;
 }
 
 footer{
