--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,27 @@ h4 {
     max-height: 36px;
     overflow: hidden;
 }
+h5{
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 27px;  
+}
+h6{
+    font-weight: 200;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.018em;
+    margin-bottom: 13px;
+}
 .price{
     font-weight: 400;
     font-size: 16px;
     color: black;
     line-height: 19px;
 }
-
 
 main {
 display: flex;
@@ -138,7 +152,60 @@ footer{
     justify-content: center;
     align-items: center;
 }
-#botao1:disabled{
+
+.modal-container{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.9);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal{ 
+    width: 377px;
+    height: 353px;
+    background-color:#50D074;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+}
+.modal-pedido{
+    margin: 21px 25px 2px 25px;
+    width: 327px;
+    height: 330px;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;    
+}
+.modal-pedido h5:first-child {
+    margin-bottom: 28px;
+}
+.modal-pedido h5:last-of-type {
+    margin-bottom: 24px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+#button1:enabled{
+    font-size: 20px;
+    color: white;
+    border-style: none;
+    background-color: #32B72F;
+    height: 61px;
+    min-width: 364px;
+    left: 25px;
+    bottom: 16px;
+    border-radius: 50px;
+}
+#button1:disabled{
     font-size: 20px;
     color: white;
     border-style: none;
@@ -149,14 +216,24 @@ footer{
     bottom: 16px;
     border-radius: 50px;
 }
-#botao1:enabled{
-    font-size: 20px;
-    color: white;
-    border-style: none;
-    background-color: #32B72F;
-    height: 61px;
-    min-width: 364px;
-    left: 25px;
-    bottom: 16px;
-    border-radius: 50px;
+#button2{
+    width: 100%;
+    height: 52px;
+    background-color: #FFFFFF;
+    color: #50D074 ;  
+    border: none;
+    outline: none; 
+    border-radius: 100px;
+    font-size: 22px;
+    font-weight: 700;
+}
+#button3{
+    width: 100%;
+    height: 52px;
+    background-color:#50D074;
+    border: none;
+    outline: none;
+    font-size: 22px;
+    color: #FFFFFF;
+    font-weight: 700;   
 }
