--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,20 @@ height: calc(100vh - 184px);
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     position: relative;
 }
+.selected {
+    background-color: white;
+    width: 172px;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    padding: 18px 14px 14px 14px;
+    border-radius: 9px;
+    margin-right: 16px;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+    position: relative;
+    border: 5px solid  #32B72F; 
+    padding: 13px 9px 9px 9px;
+}
 img{
     height: 87px;
     width: 144px;
@@ -127,20 +141,7 @@ ion-icon{
     display: none;
 }
 
-.option-selected{
-    background-color: white;
-    width: 172px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 18px 14px 14px 14px;
-    border-radius: 9px;
-    margin-right: 16px;
-    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
-    position: relative;
-    border: 5px solid  #32B72F; 
-    padding: 13px 9px 9px 9px;
-}
+
 
 footer{
     position: fixed;
@@ -161,7 +162,7 @@ footer{
     top: 0px;
     left: 0px;
     z-index: 100;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
