--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ height: calc(100vh - 184px);
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     position: relative;
 }
+
 .selected {
     background-color: white;
     width: 172px;
@@ -140,7 +141,9 @@ ion-icon{
     right: 11px;
     display: none;
 }
-
+.selected > ion-icon{
+    display: block  ;
+}
 
 
 footer{
