--- a/css/style.css
+++ b/css/style.css
@@ -1,246 +1,263 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-body{
-    font-family: 'Roboto', sans-serif;
-    background-color: #EEEEEE;
-}
-header{
-    top: 0;
-    position: fixed;
-    height: 92px;
-    background-color:#CF2B2B;
-    padding-left: 21px;
-    color: white;
-    width: 100%;
-    margin-bottom: 92px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    /* display: none; */
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #eeeeee;
 }
 
+
+/* cabeçalho */
+
+header {
+  top: 0;
+  position: fixed;
+  height: 92px;
+  background-color: #cf2b2b;
+  padding-left: 21px;
+  color: white;
+  width: 100%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 100;
+}
 header p {
-    font-size: 18px;
-    font-weight: 400;
+  font-size: 18px;
+  font-weight: 400;
 }
 
-h1{
-    font-family: 'Righteous', cursive;
-    font-size: 44px;
-    font-style: normal;
-    font-weight: normal;
-    padding-top: 14px;
-    letter-spacing: -0.012em;
+
+/* TEXTOS */
+
+h1 {
+  font-family: "Righteous", cursive;
+  font-size: 44px;
+  font-style: normal;
+  font-weight: normal;
+  padding-top: 14px;
+  letter-spacing: -0.012em;
 }
 h2 {
-    font-family: 'Righteous', cursive;
-    font-size: 26px;
-    color:#333333;
-    letter-spacing: 0.018em;
-    /* background-color: chartreuse; */
-    margin-bottom: 17px;
+  font-family: "Righteous", cursive;
+  font-size: 26px;
+  color: #333333;
+  letter-spacing: 0.018em;
+  margin-bottom: 17px;
+  line-height: 30px;
 }
-h3{
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 19px;
-    color:#333333;
-    margin-top: 8px;
-    margin-bottom: 4px;
+h3 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  color: #333333;
+  margin-top: 8px;
+  margin-bottom: 4px;
 }
 h4 {
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 18px;
-    color:#A6A6A6;
-    margin-bottom: 5px;
-    max-height: 36px;
-    overflow: hidden;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
+  color: #a6a6a6;
+  margin-bottom: 5px;
+  max-height: 36px;
+  overflow: hidden;
 }
-h5{
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 27px;  
+h5 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 27px;
 }
-#food__price,#drink__price,#dessert__price{
-    display: block;
+#food__price,
+#drink__price,
+#dessert__price {
+  display: block;
 }
-.price{
-    font-weight: 400;
-    font-size: 16px;
-    color: black;
-    line-height: 19px;
+.price {
+  font-weight: 400;
+  font-size: 16px;
+  color: black;
+  line-height: 19px;
+  position: absolute;
+  left: 14px;
+  bottom: 11px;
 }
-.final{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    font-weight: 200;
-    font-size: 22px;
-    line-height: 27px;
-    letter-spacing: 0.018em;
-    margin-bottom: 13px;
+.final {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 200;
+  font-size: 22px;
+  line-height: 27px;
+  letter-spacing: 0.018em;
+  margin-bottom: 13px;
 }
+
+/* opçoes */
 
 main {
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-/* background-color: aqua; */
-margin-top: 92px;
-padding-top: 31px;
-padding-left: 19px; 
-height: calc(100vh - 184px);
+  display: flex;
+  flex-direction: column;
+  margin: 92px 0px;
+  padding: 31px 0px 0px 19px;
 }
-
-.options{
-    display: flex;
-    overflow-x:scroll;
+section {
+  margin-bottom: 27px;
 }
-.options :last-child{
-    margin-right: 0px;
+section:last-child {
+  margin-bottom: 0px;
 }
-.produto {
-    background-color: aqua;
+.options {
+  display: flex;
+  overflow-x: scroll;
 }
-
+.options :last-child {
+  margin-right: 0px;
+}
 .option {
-    background-color: white;
-    width: 172px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 18px 14px 14px 14px;
-    border-radius: 9px;
-    margin-right: 16px;
-    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
-    position: relative;
+  background-color: white;
+  width: 172px;
+  padding: 18px 14px 14px 14px;
+  border-radius: 9px;
+  margin-right: 16px;
+  box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+  position: relative;
 }
+img {
+  height: 87px;
+  width: 144px;
+  border-radius: 4px;
+}
+.foodOptions div{
+    height: 210px;
+}
+.drinkOptions div{
+    height: 202px;
+}
+.dessertOptions div{
+    height: 197px;
+}
+
+/* layout selecionado */
 
 .selected {
-    background-color: white;
-    width: 172px;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    padding: 18px 14px 14px 14px;
-    border-radius: 9px;
-    margin-right: 16px;
-    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
-    position: relative;
-    border: 5px solid  #32B72F; 
-    padding: 13px 9px 9px 9px;
+  box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+  border: 5px solid #32b72f;
+  padding: 13px 9px 9px 9px;
 }
-img{
-    height: 87px;
-    width: 144px;
-    border-radius: 4px;
+.selected .price {
+  left: 9px;
+  bottom: 6px;
 }
 
-ion-icon{
-    font-size: 19px;
-    color: #32B72F;
-    position: absolute;
-    bottom: 9px;
-    right: 11px;
-    display: none;
+/* icone checked */
+
+ion-icon {
+  font-size: 19px;
+  color: #32b72f;
+  position: absolute;
+  bottom: 9px;
+  right: 11px;
+  display: none;
 }
-.selected > ion-icon{
-    display: block  ;
+.selected > ion-icon {
+  display: block;
 }
 
+/* rodapé */
 
-footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 92px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 92px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modal-container{
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, 0.9);
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 100;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
+/* modal */
 
-.modal{ 
-    width: 377px;
-    height: 353px;
-    background-color:#50D074;
-    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 9px;
+.modal-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
-.modal-pedido{
-    margin: 21px 25px 2px 25px;
-    width: 327px;
-    height: 330px;
-    color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;    
+.modal {
+  width: 377px;
+  height: 353px;
+  background-color: #50d074;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 9px;
+}
+.modal-pedido {
+  margin: 21px 25px 2px 25px;
+  width: 327px;
+  height: 330px;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .modal-pedido h5:first-child {
-    margin-bottom: 28px;
+  margin-bottom: 28px;
 }
 .modal-pedido h5:last-of-type {
-    margin-bottom: 24px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  margin-bottom: 24px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
+/* botoes */
 
-#button1:enabled{
-    font-size: 20px;
-    color: white;
-    border-style: none;
-    background-color: #32B72F;
-    height: 61px;
-    min-width: 364px;
-    left: 25px;
-    bottom: 16px;
-    border-radius: 50px;
+#button1:enabled {
+  font-size: 20px;
+  color: white;
+  border-style: none;
+  background-color: #32b72f;
+  height: 61px;
+  min-width: 364px;
+  left: 25px;
+  bottom: 16px;
+  border-radius: 50px;
 }
-#button1:disabled{
-    font-size: 20px;
-    color: white;
-    border-style: none;
-    background-color: #CBCBCB;
-    height: 61px;
-    min-width: 364px;
-    left: 25px;
-    bottom: 16px;
-    border-radius: 50px;
+#button1:disabled {
+  font-size: 20px;
+  color: white;
+  border-style: none;
+  background-color: #cbcbcb;
+  height: 61px;
+  min-width: 364px;
+  left: 25px;
+  bottom: 16px;
+  border-radius: 50px;
 }
-#button2{
-    width: 100%;
-    height: 52px;
-    background-color: #FFFFFF;
-    color: #50D074 ;  
-    border: none;
-    outline: none; 
-    border-radius: 100px;
-    font-size: 22px;
-    font-weight: 700;
+#button2 {
+  width: 100%;
+  height: 52px;
+  background-color: #ffffff;
+  color: #50d074;
+  border: none;
+  outline: none;
+  border-radius: 100px;
+  font-size: 22px;
+  font-weight: 700;
 }
-#button3{
-    width: 100%;
-    height: 52px;
-    background-color:#50D074;
-    border: none;
-    outline: none;
-    font-size: 22px;
-    color: #FFFFFF;
-    font-weight: 700;   
+#button3 {
+  width: 100%;
+  height: 52px;
+  background-color: #50d074;
+  border: none;
+  outline: none;
+  font-size: 22px;
+  color: #ffffff;
+  font-weight: 700;
 }
